<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/listitem_icon_size"
        android:paddingRight="@dimen/padding_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/dc_logo"/>
            <ImageView
                android:id="@+id/imageViewLMH"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/dc_moh_logo"
                 />

            <ImageView
                android:id="@+id/imageViewMak"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:paddingLeft="2dp"
                app:srcCompat="@drawable/dc_mak_logo" />

        </LinearLayout>



        <TextView
            android:id="@+id/welcome_title"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/fragment_welcome_title"/>

        <TextView
            android:id="@+id/welcome_desc"
            style="@style/NormalTextDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/fragment_welcome_desc"/>

        <TextView
            android:id="@+id/welcome_login_info"
            style="@style/SubheaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/fragment_welcome_login_info"/>

        <TextView
            android:id="@+id/welcome_privacy_info"
            style="@style/SubheaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/fragment_welcome_privacy_info"/>

        <Button
            android:id="@+id/welcome_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/title_register"
            android:theme="@style/PrimaryButton"/>

        <Button
            android:id="@+id/welcome_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/title_login"/>

        <TextView
            android:id="@+id/welcome_powered_by"
            style="@style/SubheaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/fragment_welcome_powered_by"/>
    </LinearLayout>

</ScrollView>